--- a/clusters/homelab/apps/longhorn/helmrelease.yaml
+++ b/clusters/homelab/apps/longhorn/helmrelease.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: longhorn
-  namespace: longhorn
+  namespace: longhorn-system
 spec:
   interval: 10m
   chart:
