--- a/clusters/homelab/apps/headlamp/helmrelease.yaml
+++ b/clusters/homelab/apps/headlamp/helmrelease.yaml
@@ -1,15 +1,15 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: kube-ops-view
-  namespace: kube-ops-view
+  name: headlamp
+  namespace: headlamp
 spec:
   chart:
     spec:
-      chart: kube-ops-view
+      chart: headlamp
       sourceRef:
         kind: HelmRepository
-        name: j6nca
+        name: headlamp
         namespace: flux-system
-      version: 1.0.0
+      version: 0.29.1
   interval: 15m
