--- a/clusters/homelab/repos/oci/grafana-operator.yaml
+++ b/clusters/homelab/repos/oci/grafana-operator.yaml
@@ -3,9 +3,9 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: OCIRepository
 metadata:
   name: grafana-operator
-  namespace: grafana-operator
+  namespace: flux-system
 spec:
   interval: 30m
   url: oci://ghcr.io/grafana/helm-charts/grafana-operator
   ref:
-    tag: latest
+    semver: v5.18.0
