--- a/apps/base/external-secrets/helmrelease.yaml
+++ b/apps/base/external-secrets/helmrelease.yaml
@@ -13,3 +13,8 @@ spec:
         namespace: flux-system
       version: 0.10.7
   interval: 15m
+  dependsOn:
+  - name: onepassword-connect
+# values.yaml
+  values:
+    installCRDS: true
