--- a/clusters/homelab/apps/external-secrets/kustomize.yaml
+++ b/clusters/homelab/apps/external-secrets/kustomize.yaml
@@ -4,8 +4,14 @@ metadata:
   name: external-secrets
   namespace: flux-system
 spec:
+  targetNamespace: secret-ops
+  commonMetadata:
+    labels:
+      service: external-secrets
+  # dependsOn:
+  #   - name: onepassword-connect
   interval: 5m
-  path: "./apps/base/external-secrets"
+  path: ./apps/base/external-secrets
   prune: true
   sourceRef:
     kind: GitRepository
