--- a/apps/base/external-secrets/clustersecretstore.yaml
+++ b/apps/base/external-secrets/clustersecretstore.yaml
@@ -1,17 +1,17 @@
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ClusterSecretStore
 metadata:
   name: onepassword
-  spec:
-    provider:
-      onepassword:
-        connectHost: http://onepassword-connect.onepassword-connect.svc.cluster.local:8080
-        vaults:
-          lab: 1
-        auth:
-          secretRef:
-            connectTokenSecretRef:
-              name: op-token
-              key: token
-              namespace: secret-ops
+spec:
+  provider:
+    onepassword:
+      connectHost: http://onepassword-connect.onepassword-connect.svc.cluster.local:8080
+      vaults:
+        lab: 1
+      auth:
+        secretRef:
+          connectTokenSecretRef:
+            name: op-token
+            key: token
+            namespace: secret-ops
                                                                                         
