move op to kustomize

--- a/apps/base/onepassword-connect/release/helmrelease.yaml
+++ b/apps/base/onepassword-connect/release/helmrelease.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   chart:
     spec:
-      chart: connect
+      chart: onepassword-connect
       sourceRef:
         kind: HelmRepository
         name: onepassword-connect
