--- a/apps/base/onepassword-connect/release/helmrelease.yaml
+++ b/apps/base/onepassword-connect/release/helmrelease.yaml
@@ -6,10 +6,11 @@ metadata:
 spec:
   chart:
     spec:
-      chart: onepassword-connect
+      chart: connect
       sourceRef:
         kind: HelmRepository
-        name: onepassword-connect
+        name: 1password
         namespace: flux-system
       version: 1.15.1
   interval: 15m
+# defaults to secret>op-credentials>1password-credentials.json
