--- a/apps/base/external-secrets/resources/clustersecretstore.yaml
+++ b/apps/base/external-secrets/resources/clustersecretstore.yaml
@@ -13,5 +13,5 @@ spec:
           connectTokenSecretRef:
             name: op-token
             key: token
-            namespace: secret-ops
+            namespace: onepassword-connect
                                                                                         
