--- a/apps/base/external-secrets/kustomize.yaml
+++ b/apps/base/external-secrets/kustomize.yaml
@@ -10,7 +10,7 @@ spec:
       service: external-secrets
   dependsOn:
     - name: onepassword-connect
-      namespace: onepassword-connect
+      namespace: flux-system
   interval: 5m
   path: ./apps/base/external-secrets/release
   prune: true
