--- a/apps/base/cloudflare-tunnel/kustomize.yaml
+++ b/apps/base/cloudflare-tunnel/kustomize.yaml
@@ -1,15 +1,17 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: onepassword-connect
+  name: cloudflare-tunnel
   namespace: flux-system
 spec:
-  targetNamespace: onepassword-connect
+  targetNamespace: cloudflare-tunnel
   commonMetadata:
     labels:
-      service: onepassword-connect
+      service: cloudflare-tunnel
+  dependsOn:
+    - name: external-secrets-resources
   interval: 5m
-  path: ./apps/base/onepassword-connect/release
+  path: ./apps/base/cloudflare-tunnel/release
   prune: true
   sourceRef:
     kind: GitRepository
