--- a/clusters/homelab/apps/onepassword-connect/kustomization.yaml
+++ b/clusters/homelab/apps/onepassword-connect/kustomization.yaml
@@ -3,3 +3,6 @@ kind: Kustomization
 resources:
   - ../../../../apps/base/onepassword-connect/kustomize.yaml
   - ./namespace.yaml
+commonMetadata:
+  labels:
+    cluster: homelab
