add common labels

--- a/clusters/homelab/apps/cloudflare-tunnel/kustomization.yaml
+++ b/clusters/homelab/apps/cloudflare-tunnel/kustomization.yaml
@@ -3,3 +3,6 @@ kind: Kustomization
 resources:
   - ../../../../apps/base/cloudflare-tunnel/kustomize.yaml
   - ./namespace.yaml
+commonLabels:
+  cluster: homelab
+  group: network
