--- a/clusters/homelab/apps/alertmanager/kustomization.yaml
+++ b/clusters/homelab/apps/alertmanager/kustomization.yaml
@@ -3,3 +3,6 @@ kind: Kustomization
 resources:
   - ../../../../apps/base/alertmanager/kustomize.yaml
   - ./namespace.yaml
+commonLabels:
+  cluster: homelab
+  group: observability
