--- a/apps/base/grafana/release/helmrelease.yaml
+++ b/apps/base/grafana/release/helmrelease.yaml
@@ -15,6 +15,8 @@ spec:
   interval: 10m
   values:
     grafana.ini:
+      server:
+        root_url: https://grafana.j6n.dev
       # Enable public viewer
       auth.anonymous:
         enabled: true
