add oauth to grafana

--- a/apps/base/grafana/kustomize.yaml
+++ b/apps/base/grafana/kustomize.yaml
@@ -8,6 +8,8 @@ spec:
   commonMetadata:
     labels:
       service: grafana
+  dependsOn:
+    - name: external-secrets-resources
   interval: 5m
   path: ./apps/base/grafana/release
   prune: true
