--- a/apps/base/postgres-operator/release/helmrelease.yaml
+++ b/apps/base/postgres-operator/release/helmrelease.yaml
@@ -1,10 +1,10 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: grafana-operator
+  name: postgres-operator
 spec:
   chartRef:
     kind: OCIRepository
-    name: grafana-operator
+    name: crunchydata-pgo
     namespace: flux-system
   interval: 15m
