--- a/clusters/homelab/apps/postgres-operator/kustomization.yaml
+++ b/clusters/homelab/apps/postgres-operator/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../../../../apps/base/postgres-operator/kustomize.yaml
+  - ../../../../apps/base/onepassword-connect/kustomize.yaml
   - ./namespace.yaml
 commonLabels:
   cluster: homelab
-  group: database
+  group: secrets-ops
