--- a/apps/base/prometheus/release/helmrelease.yaml
+++ b/apps/base/prometheus/release/helmrelease.yaml
@@ -19,3 +19,8 @@ spec:
       enabled: false
     prometheus-pushgateway:
       enabled: false
+    server:
+      ## Prometheus data retention period (default if not specified is 15 days)
+      retention: "30d"
+      ## Prometheus' data retention size. Supported units: B, KB, MB, GB, TB, PB, EB.
+      retentionSize: ""
