--- a/apps/base/reloader/kustomize.yaml
+++ b/apps/base/reloader/kustomize.yaml
@@ -1,15 +1,15 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: gatus
+  name: reloader
   namespace: flux-system
 spec:
-  targetNamespace: gatus
+  targetNamespace: reloader
   commonMetadata:
     labels:
-      service: gatus
+      service: reloader
   interval: 5m
-  path: ./apps/base/gatus/release
+  path: ./apps/base/reloader/release
   prune: true
   sourceRef:
     kind: GitRepository
