--- a/apps/base/reloader/release/helmrelease.yaml
+++ b/apps/base/reloader/release/helmrelease.yaml
@@ -1,14 +1,14 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: gatus
+  name: reloader
 spec:
   chart:
     spec:
-      chart: gatus
+      chart: reloader
       sourceRef:
         kind: HelmRepository
-        name: twin
+        name: stakater
         namespace: flux-system
-      version: 1.2.0
+      version: 2.1.3
   interval: 15m
