--- a/apps/base/volsync/kustomize.yaml
+++ b/apps/base/volsync/kustomize.yaml
@@ -16,3 +16,22 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: volsync-replication
+  namespace: flux-system
+spec:
+  targetNamespace: volsync
+  commonMetadata:
+    labels:
+      service: volsync
+  dependsOn:
+    - name: volsync
+  interval: 5m
+  path: ./apps/base/volsync/replication
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
