--- a/apps/base/volsync/release/externalsecrets.yaml
+++ b/apps/base/volsync/release/externalsecrets.yaml
@@ -1,34 +1,34 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: volsync-restic-credentials
+  name: volsync-r2
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
     creationPolicy: Owner
-    # this is how the Kind=Secret will look like
     template:
       data:
-      # multiline string
-        credentials.json: |-
-          {
-            "AccountTag": "{{ .account_id | toString }}",
-            "TunnelID": "{{ .tunnel_id | toString }}",
-            "TunnelSecret": "{{ .tunnel_secret | toString }}"
-          }
+        RESTIC_REPOSITORY: s3:{{ .bucket_endpoint | toString }}
+        RESTIC_PASSWORD: {{ .bucket_encryption_key | toString }}
+        AWS_ACCESS_KEY_ID: {{ .cf_access_key_id | toString }}
+        AWS_SECRET_ACCESS_KEY: {{ .cf_access_key_secret | toString }}
 
   data:
-  - secretKey: account_id
+  - secretKey: bucket_endpoint
     remoteRef:
-      key: cloudflared-tunnel-credentials
-      property: account-id
-  - secretKey: tunnel_id
+      key: volsync-r2
+      property: bucket_endpoint
+  - secretKey: bucket_encryption_key
     remoteRef:
-      key: cloudflared-tunnel-credentials
-      property: tunnel-id
-  - secretKey: tunnel_secret
+      key: volsync-r2
+      property: bucket_encryption_key
+  - secretKey: cf_access_key_id
     remoteRef:
-      key: cloudflared-tunnel-credentials
-      property: tunnel-secret
+      key: volsync-r2
+      property: cf_access_key_id
+  - secretKey: cf_access_key_secret
+    remoteRef:
+      key: volsync-r2
+      property: cf_access_key_secret
