--- a/apps/base/volsync/release/externalsecrets.yaml
+++ b/apps/base/volsync/release/externalsecrets.yaml
@@ -11,8 +11,8 @@ spec:
     template:
       data:
         RESTIC_REPOSITORY: s3:{{ .bucket_endpoint | toString }}
-        AWS_ACCESS_KEY_ID: {{ .cf_access_key_id | toString }}
-        AWS_SECRET_ACCESS_KEY: {{ .cf_access_key_secret | toString }}
+        AWS_ACCESS_KEY_ID: "{{ .cf_access_key_id | toString }}"
+        AWS_SECRET_ACCESS_KEY: "{{ .cf_access_key_secret | toString }}"
 
   data:
   - secretKey: bucket_endpoint
