--- a/apps/base/external-secrets/resources/clustersecretstore.yaml
+++ b/apps/base/external-secrets/resources/clustersecretstore.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   provider:
     onepassword:
-      connectHost: http://onepassword-connect.onepassword-connect.svc.cluster.local:8080
+      connectHost: http://_connect-api._tcp.onepassword-connect.onepassword-connect
       vaults:
         lab: 1
       auth:
