--- a/apps/base/snapshot-controller/kustomize.yaml
+++ b/apps/base/snapshot-controller/kustomize.yaml
@@ -4,7 +4,7 @@ metadata:
   name: snapshot-controller
   namespace: flux-system
 spec:
-  targetNamespace: snapshot-controller
+  targetNamespace: kube-system
   commonMetadata:
     labels:
       service: snapshot-controller
