define helm install crds behaviour

--- a/apps/base/grafana-operator/release/helmrelease.yaml
+++ b/apps/base/grafana-operator/release/helmrelease.yaml
@@ -7,4 +7,9 @@ spec:
     kind: OCIRepository
     name: grafana-operator
     namespace: flux-system
+  install:
+    crds: CreateReplace
+  upgrade:
+    crds: CreateReplace
+    cleanupOnFail: true
   interval: 15m
