--- a/apps/base/external-secrets/release/helmrelease.yaml
+++ b/apps/base/external-secrets/release/helmrelease.yaml
@@ -11,6 +11,11 @@ spec:
         name: external-secrets
         namespace: flux-system
       version: 0.17.0
+  install:
+    crds: CreateReplace
+  upgrade:
+    crds: CreateReplace
+    cleanupOnFail: true
   interval: 15m
 # values.yaml
   values:
