--- a/apps/base/prometheus/kustomize.yaml
+++ b/apps/base/prometheus/kustomize.yaml
@@ -14,3 +14,19 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: prormetheus-replication
+  namespace: flux-system
+spec:
+  targetNamespace: prometheus
+  dependsOn:
+    - name: volsync
+  interval: 5m
+  path: ./apps/base/prometheus/replication
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
