--- a/apps/base/postgres-operator/kustomize.yaml
+++ b/apps/base/postgres-operator/kustomize.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: flux-system
 spec:
   targetNamespace: postgres-operator
+  dependsOn:
+    - name: longhorn
   commonMetadata:
     labels:
       service: postgres-operator
