--- a/apps/base/prometheus/kustomize.yaml
+++ b/apps/base/prometheus/kustomize.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: flux-system
 spec:
   targetNamespace: prometheus
+  dependsOn:
+    - name: longhorn
   commonMetadata:
     labels:
       service: prometheus
@@ -18,12 +20,13 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: prormetheus-replication
+  name: prometheus-replication
   namespace: flux-system
 spec:
   targetNamespace: prometheus
   dependsOn:
     - name: volsync
+    - name: prometheus
   interval: 5m
   path: ./apps/base/prometheus/replication
   prune: true
