--- a/apps/base/grafana/release/helmrelease.yaml
+++ b/apps/base/grafana/release/helmrelease.yaml
@@ -45,3 +45,33 @@ spec:
         existingSecret: "grafana-admin"
         userKey: admin-user
         passwordKey: admin-password
+
+    # Plugins
+    plugins: []
+
+    ## Configure grafana datasources
+    ## ref: http://docs.grafana.org/administration/provisioning/#datasources
+    datasources:
+      datasources.yaml:
+        apiVersion: 1
+        datasources:
+        - name: Prometheus
+          type: prometheus
+          url: http://prometheus-server.prometheus
+          access: proxy
+          isDefault: true
+    #    - name: CloudWatch
+    #      type: cloudwatch
+    #      access: proxy
+    #      uid: cloudwatch
+    #      editable: false
+    #      jsonData:
+    #        authType: default
+    #        defaultRegion: us-east-1
+    #    deleteDatasources: []
+    #    - name: Prometheus
+
+    ## NOTE: To use dashboards you must also enable/configure dashboardProviders
+    ## ref: https://grafana.com/dashboards
+    ## dashboards per provider, use provider name as key.
+    dashboards: {}
