--- a/apps/base/longhorn/release/volumesnapshotclass.yaml
+++ b/apps/base/longhorn/release/volumesnapshotclass.yaml
@@ -1,5 +1,5 @@
 apiVersion: snapshot.storage.k8s.io/v1
-kind: volumesnapshotclasses
+kind: VolumeSnapshotClass
 metadata:
   name: longhorn-backup-vsc
 driver: driver.longhorn.io
