specify vsclass for prometheus replication

--- a/apps/base/prometheus/replication/replicationsource.yaml
+++ b/apps/base/prometheus/replication/replicationsource.yaml
@@ -16,3 +16,4 @@ spec:
       daily: 7
     # Use Snapshot method for longhorn
     copyMethod: Snapshot
+    volumeSnapshotClassName: longhorn-backup-vsc
