fix replication secret

--- a/apps/base/prometheus/replication/externalsecrets.yaml
+++ b/apps/base/prometheus/replication/externalsecrets.yaml
@@ -11,6 +11,7 @@ spec:
     template:
       data:
         RESTIC_REPOSITORY: s3:{{ .bucket_endpoint | toString }}
+        RESTIC_PASSWORD: "{{ .restic_password | toString }}"
         AWS_ACCESS_KEY_ID: "{{ .cf_access_key_id | toString }}"
         AWS_SECRET_ACCESS_KEY: "{{ .cf_access_key_secret | toString }}"
 
@@ -19,6 +20,10 @@ spec:
     remoteRef:
       key: volsync-r2
       property: bucket_endpoint
+  - secretKey: restic_password
+    remoteRef:
+      key: volsync-r2
+      property: restic_password
   - secretKey: cf_access_key_id
     remoteRef:
       key: volsync-r2
