--- a/apps/base/prometheus/replication/externalsecrets.yaml
+++ b/apps/base/prometheus/replication/externalsecrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: volsync-r2
+  name: prometheus-replication
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
@@ -10,7 +10,7 @@ spec:
     creationPolicy: Owner
     template:
       data:
-        RESTIC_REPOSITORY: s3:{{ .bucket_endpoint | toString }}
+        RESTIC_REPOSITORY: s3:{{ .bucket_endpoint | toString }}/prometheus
         RESTIC_PASSWORD: "{{ .restic_password | toString }}"
         AWS_ACCESS_KEY_ID: "{{ .cf_access_key_id | toString }}"
         AWS_SECRET_ACCESS_KEY: "{{ .cf_access_key_secret | toString }}"
