--- a/apps/base/grafana-alloy/release/helmrelease.yaml
+++ b/apps/base/grafana-alloy/release/helmrelease.yaml
@@ -12,3 +12,46 @@ spec:
         namespace: flux-system
       version: 1.0.3
   interval: 10m
+  values:
+    alloy:
+      configMap:
+        content: |
+          logging {
+            level  = "info"
+            format = "logfmt"
+          }
+
+          discovery.kubernetes "pods" {
+            role = "pod"
+          }
+
+          discovery.kubernetes "nodes" {
+            role = "node"
+          }
+
+          discovery.kubernetes "services" {
+            role = "service"
+          }
+
+          discovery.kubernetes "endpoints" {
+            role = "endpoints"
+          }
+
+          discovery.kubernetes "endpointslices" {
+            role = "endpointslice"
+          }
+
+          discovery.kubernetes "ingresses" {
+            role = "ingress"
+          }
+
+          prometheus.scrape "prometheus" {
+            targets    = discovery.kubernetes.pods.targets
+            forward_to = [prometheus.remote_write.prometheus.receiver]
+          }
+
+          prometheus.remote_write "prometheus" {
+            endpoint {
+              url = "http://prometheus-server.prometheus:9090/api/v1/write"
+            }
+          }
