enable gatus metrics

--- a/apps/base/gatus/release/helmrelease.yaml
+++ b/apps/base/gatus/release/helmrelease.yaml
@@ -24,6 +24,7 @@ spec:
     config:
       storage:
         type: memory
+      metrics: true
       endpoints:
         - name: Personal
           group: Projects
