fix grafana config

--- a/apps/base/kube-prometheus-stack/release/helmrelease.yaml
+++ b/apps/base/kube-prometheus-stack/release/helmrelease.yaml
@@ -50,8 +50,8 @@ spec:
       admin:
         ## Name of the secret. Can be templated.
         existingSecret: "grafana-admin"
-        userKey: admin-user
-        passwordKey: admin-password
+        userKey: admin_user
+        passwordKey: admin_password
       # Plugins
       plugins: []
 
