fix grafana config

--- a/apps/base/kube-prometheus-stack/release/helmrelease.yaml
+++ b/apps/base/kube-prometheus-stack/release/helmrelease.yaml
@@ -57,15 +57,15 @@ spec:
 
       ## Configure grafana datasources
       ## ref: http://docs.grafana.org/administration/provisioning/#datasources
-      datasources:
-        datasources.yaml:
-          apiVersion: 1
-          datasources:
-          - name: Prometheus
-            type: prometheus
-            url: http://prometheus-server.prometheus
-            access: proxy
-            isDefault: true
+      # datasources:
+      #   datasources.yaml:
+      #     apiVersion: 1
+      #     datasources:
+      #     - name: Prometheus
+      #       type: prometheus
+      #       url: http://prometheus-server.prometheus
+      #       access: proxy
+      #       isDefault: true
       #    - name: CloudWatch
       #      type: cloudwatch
       #      access: proxy
