--- a/apps/base/kube-prometheus-stack/release/helmrelease.yaml
+++ b/apps/base/kube-prometheus-stack/release/helmrelease.yaml
@@ -93,4 +93,5 @@ spec:
     
     prometheusOperator:
       prometheusSpec:
+        serviceMonitorSelectorNilUsesHelmValues: false
         retention: "15d"
