had the prometheus configs under the wrong section

--- a/apps/base/kube-prometheus-stack/release/helmrelease.yaml
+++ b/apps/base/kube-prometheus-stack/release/helmrelease.yaml
@@ -91,7 +91,7 @@ spec:
     windowsMonitoring:
       enabled: false
     
-    prometheusOperator:
+    prometheus:
       prometheusSpec:
         serviceMonitorSelectorNilUsesHelmValues: false
         retention: "15d"
