--- a/apps/base/kube-prometheus-stack/release/helmrelease.yaml
+++ b/apps/base/kube-prometheus-stack/release/helmrelease.yaml
@@ -108,8 +108,14 @@ spec:
       forceDeployDashboards: true
       sidecar:
         dashboards:
+          enabled: true
           annotations:
             grafana_folder: Kubernetes
+          folderAnnotation: grafana_folder
+        provider:
+          allowUiUpdates: true
+          foldersFromFilesStructure: true
+      defaultDashboardsTimezone: 'America/Toronto'
 
     kubeStateMetrics:
       enabled: true
