--- a/apps/base/kube-prometheus-stack/release/helmrelease.yaml
+++ b/apps/base/kube-prometheus-stack/release/helmrelease.yaml
@@ -111,7 +111,9 @@ spec:
           label: grafana_dashboard
           labelValue: "1"
           searchNamespace: ALL
-          # Store default dashboards in 'Kubernetes' folder. Ref: https://github.com/grafana/helm-charts/issues/527#issuecomment-982319638
+          # Store default dashboards in 'Kubernetes' folder. A lot of these are defaults already but this gives better visibility
+          # of their settings in such a complex chart.
+          # Ref: https://github.com/grafana/helm-charts/issues/527#issuecomment-982319638
           annotations:
             grafana_folder: Kubernetes
           folderAnnotation: grafana_folder
