--- a/apps/base/gatus/kustomize.yaml
+++ b/apps/base/gatus/kustomize.yaml
@@ -16,3 +16,22 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: gatus
+  namespace: flux-system
+spec:
+  targetNamespace: gatus
+  commonMetadata:
+    labels:
+      service: gatus
+  dependsOn:
+    - name: kube-prometheus-stack
+  interval: 5m
+  path: ./apps/base/gatus/dashboards
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
