--- a/apps/base/kube-prometheus-stack/release/helmrelease.yaml
+++ b/apps/base/kube-prometheus-stack/release/helmrelease.yaml
@@ -100,11 +100,41 @@ spec:
               editable: true
               options:
                 path: /var/lib/grafana/dashboards/kubernetes
+            - name: network
+              orgId: 1
+              folder: Network
+              type: file
+              disableDeletion: false
+              editable: true
+              options:
+                path: /var/lib/grafana/dashboards/network
+            - name: storage
+              orgId: 1
+              folder: Storage
+              type: file
+              disableDeletion: false
+              editable: true
+              options:
+                path: /var/lib/grafana/dashboards/storage
+            - name: database
+              orgId: 1
+              folder: Database
+              type: file
+              disableDeletion: false
+              editable: true
+              options:
+                path: /var/lib/grafana/dashboards/database
       dashboards:
-        system:
-          gatus:
-            url: https://raw.githubusercontent.com/j6nca/homelab-cluster/refs/heads/main/dashboards/system/gatus.json
-            datasource: Prometheus
+        # system:
+        #   gatus:
+        #     url: https://raw.githubusercontent.com/j6nca/homelab-cluster/refs/heads/main/dashboards/system/gatus.json
+        #     datasource: Prometheus
+        # network:
+        #   cloudflared:
+        #     gnetId: 17457
+        #     revision: 6
+        #     datasource: Prometheus
+        
       sidecar:
         dashboards:
           enabled: true
