--- a/apps/base/gatus/kustomize.yaml
+++ b/apps/base/gatus/kustomize.yaml
@@ -20,7 +20,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: gatus
+  name: gatus-dashboards
   namespace: flux-system
 spec:
   targetNamespace: gatus
