--- a/apps/base/kube-prometheus-stack/release/helmrelease.yaml
+++ b/apps/base/kube-prometheus-stack/release/helmrelease.yaml
@@ -165,6 +165,7 @@ spec:
     prometheus:
       prometheusSpec:
         image:
+          registry: docker.io
           repository: prompp/prompp
           tag: 2.53.2-0.2.6
         serviceMonitorSelectorNilUsesHelmValues: false
