--- a/apps/base/kube-prometheus-stack/release/helmrelease.yaml
+++ b/apps/base/kube-prometheus-stack/release/helmrelease.yaml
@@ -168,5 +168,10 @@ spec:
           registry: docker.io
           repository: prompp/prompp
           tag: 2.53.2-0.2.6
+        securityContext:
+          fsGroup: 64535
+          runAsGroup: 64535
+          runAsNonRoot: true
+          runAsUser: 64535 
         serviceMonitorSelectorNilUsesHelmValues: false
         retention: "15d"
