--- a/apps/base/kube-prometheus-stack/release/helmrelease.yaml
+++ b/apps/base/kube-prometheus-stack/release/helmrelease.yaml
@@ -125,6 +125,11 @@ spec:
               options:
                 path: /var/lib/grafana/dashboards/database
       dashboards:
+        storage:
+          longhorn:
+            gnetId: 22705
+            revision: 2
+            datasource: Prometheus
         # system:
         #   gatus:
         #     url: https://raw.githubusercontent.com/j6nca/homelab-cluster/refs/heads/main/dashboards/system/gatus.json
