--- a/apps/base/kube-prometheus-stack/kustomize.yaml
+++ b/apps/base/kube-prometheus-stack/kustomize.yaml
@@ -18,3 +18,21 @@ spec:
     kind: GitRepository
     name: flux-system
 ---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: kube-prometheus-stack-dashboards
+  namespace: flux-system
+spec:
+  targetNamespace: kube-prometheus-stack
+  commonMetadata:
+    labels:
+      service: kube-prometheus-stack
+  dependsOn:
+    - name: kube-prometheus-stack
+  interval: 5m
+  path: ./apps/base/kube-prometheus-stack/dashboards
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
