--- a/apps/base/kube-prometheus-stack/release/helmrelease.yaml
+++ b/apps/base/kube-prometheus-stack/release/helmrelease.yaml
@@ -13,8 +13,8 @@ spec:
       version: 75.3.3
   interval: 15m
   values:
-    # Enable cleaner resource names
-    cleanPrometheusOperatorObjectNames: true
+    # Shorten resource names
+    fullnameOverride: kps
     crds:
       enabled: true
     alertmanager:
